--- a/TaiKang.Web/Areas/Mpa/Views/Job/_CreateOrEditModal.cshtml
+++ b/TaiKang.Web/Areas/Mpa/Views/Job/_CreateOrEditModal.cshtml
@@ -12,13 +12,20 @@
         </div>
 
         <div class="form-group">
+            <label for="JobDescription">岗位描述</label>
             <textarea name="JobDescription">@Model.JobDescription</textarea>
-            <label for="JobDescription">职位描述</label>
         </div>
-
+        <div class="form-group form-md-line-input">
+            <textarea name="Requirements" class="form-control" rows="3" placeholder=""></textarea>
+            <label for="Requirements">岗位要求</label>
+        </div>
+        <div class="form-group">
+            <label for="Responsibilities">岗位职责</label>
+            <textarea name="Responsibilities">@Model.JobDescription</textarea>
+        </div>
         <div class="form-group form-md-line-input form-md-floating-label no-hint">
             <input type="checkbox" name="IsActive" value="true" @Html.Raw(Model.IsActive ? "checked=\"checked\"" : "")>
-            <label>是否启用</label>
+            <label>有效？</label>
         </div>
     </form>
 </div>
